# mpr

./: .flaskenv  .gitignore  README.md  requirements.txt  run.py  setup.cfg  tox.ini
app/: __init__.py  __main__.py  api.py  db.py  gen_patients.py  helper.py  home.py  schema.sql  set_config.py
app/blueprints/: auth.py  cross_performance.py  dashboard.py  home.py  patients.py  performance.py  predictor.py  reports.py  selector.py
app/lib/: __init__.py  cross_model_test.py  data_formatter.py  eval.py  models.py  prediction.py  selection.py  update_models.py  weightage.py
app/lib/parameters/: default_models.sav  default_param.json
app/static/css/: _auth.scss  _components.scss  _home.scss  _main.scss  _patients.scss  _performance.scss  _prediction.scss  _selector.scss  _variable.scss  base.scss  dashboard.css  home.css  login.css  performance.css  predictor.css  selector.css  style.css
app/static/scripts/: auth.js  cross_performance.js  mpr.js  selector.js
app/templates/: auth_layout.html  cross_performance_display.html  layout.html  login.html  performance.html  predictor.html  selector_selected.html  unauth.html
app/templates/auth/: login.html  register.html  unauth.html
app/templates/dashboard/: dashboard.html  dashboard_home.html
app/templates/errors/: 401.html  404.html  405.html  416.html
app/templates/main/: dev.html  home.html
app/util/: assets.py  db.py  helper.py
static/css/: login.css  selector.css
templates/: cross_performance.html  dev.html  home.html  layout.html  performance_display.html  predictions.html  selector.html
(+13 files in other folders)
