[metadata]
name = mpr
version = 1.3.1
description = Automated model training and selection system powered by flask.
author = Yashodhan Ketkar
author_email = kykyashodhan@gmail.com
classifiers = 
    Development Status :: 3 - Alpha
    Intended Audience :: Developers and Testers
    Topic :: Machine Learning
    Programming Language :: Python :: 3.10
keyowrds = Machine Learning, WebApp

[options]
package_dir = 
    = app
packages.find=
    where = app
python_requires => 3.10

[flake8]
max-line-length = 120
